--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,14 @@
 asgiref==3.8.1
-Babel==2.13.1
 beautifulsoup4==4.12.3
-certifi==2023.7.22
-charset-normalizer==3.3.2
-cycler==0.12.1
 distlib==0.3.8
 Django==4.2.16
 django-bootstrap-v5==1.0.11
-django-bootstrap5==24.2
-django-extensions==3.2.3
 filelock==3.15.4
-idna==3.4
-kiwisolver==1.4.5
-numpy==1.26.4
-opencv-python-headless==4.10.0.82
-packaging==24.0
-pefile==2023.2.7
 pillow==10.3.0
 platformdirs==4.2.2
-pynput==1.7.7
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-pywin32-ctypes==0.2.2
-requests==2.31.0
-six==1.16.0
 soupsieve==2.6
 sqlparse==0.5.0
-typing_extensions==4.12.2
+ttkbootstrap==1.10.1
 tzdata==2024.1
-urllib3==2.1.0
 virtualenv==20.26.3
+django-extensions==3.2.3
